changed term overide

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set-option -g automatic-rename on
 set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',alacritty:RGB'
+set-option -g default-terminal "screen"
+set-option -sa terminal-overrides ',xterm-256color'
 set -g status-style bg='#000000',fg='#ffffff'
 set -g pane-border-style fg='#ffffff'
 set -g pane-active-border-style fg='#ff0000'
